cabal-version:      3.0
name:               ESLM
version:            0.1.0.0
synopsis:
    Haskell Implementation of the Ecological Social Learning Model
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Nanda Jafarian
maintainer:         nandajafarian99@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:    
-- extra-source-files:
common warnings
    ghc-options: -Wall
executable ESLM
    import:           warnings
    main-is:          Main.hs
    other-modules: LearningEnvironment, Params, Agents
    other-extensions:NamedFieldPuns
    build-depends:    base ^>=4.17.2.1, random, normaldistribution >= 1.1.0.3, vector >= 0.13.1.0, array >= 0.5.4.0
    hs-source-dirs:   app, src
    default-language: Haskell2010
